--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -2,7 +2,7 @@
 $body-bg: #f8fafc;
 
 // Typography
-$font-family-sans-serif: 'Graphik Arabic', 'GraphikArabic', sans-serif;
+$font-family-sans-serif: 'GraphikArabic', sans-serif;
 $font-size-base: .9rem;
 $line-height-base: 1.6;
 
