wip profile links component

--- a/resources/assets/sass/_fonts.scss
+++ b/resources/assets/sass/_fonts.scss
@@ -2,3 +2,11 @@
 @import "../fonts/GraphikArabic/SemiBold/style";
 @import "../fonts/GraphikArabic/Medium/style";
 @import "../fonts/GraphikArabic/Regular/style";
+
+.font-weight-500 {
+  font-weight: 500;
+}
+
+.font-weight-600 {
+  font-weight: 600;
+}
