--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -19,7 +19,10 @@ $teal: #4dc0b5;
 $cyan: #6cb2eb;
 
 $primary: #121212;
-$secondary: #322965;
+//$secondary: #322965;
+$secondary: #00C569;
+$secondary: #0069ff;
+$secondary: #15cd72;
 $headings-color: $primary;
 
 // Card
