--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -57,3 +57,11 @@
     @extend .btn-secondary;
   }
 }
+
+.profile-footer {
+  position: absolute;
+  bottom: 8px;
+  left: 0;
+  width: 100%;
+  padding-bottom: 15px;
+}
