--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,4 +1,5 @@
 // Body
+//$body-bg: #EAEFF3;
 $body-bg: #fafafa;
 
 // Typography
@@ -24,6 +25,15 @@ $secondary: #00C569;
 $secondary: #0069ff;
 $secondary: #15cd72;
 $headings-color: $primary;
+
+//$primary: #9795E3;
+//$secondary: #CA97EB;
+//$success: #7EDB8F;
+//$info: $cyan !default;
+//$warning: $yellow !default;
+//$danger: #F96D74;
+//$light: #EAEFF3;
+//$dark: #2A2A44;
 
 // Card
 $card-border-color: #dbdbdb;
