finish customize profile pages wip

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -18,20 +18,19 @@ $cyan: #6cb2eb;
 $primary: #082471;
 $secondary: #F96156;
 $headings-color: #101B3A;
-$pragraphs-color: #777D8E;
+$paragraphs-color: #777D8E;
 $pink: #F0C9C8;
 $pink-dark: #FBE2D9;
 $gray: #F0F1F6;
 $gray-light: #F7F8FA;
-
 $danger: #F96D74;
 $success: #7EDB8F;
 
 $body-bg: $gray-light;
 
 // Card
-$card-border-color: rgba($pragraphs-color, .3);
-$border-color: rgba($pragraphs-color, .3);
+$card-border-color: rgba($paragraphs-color, .3);
+$border-color: rgba($paragraphs-color, .3);
 
 //
 $btn-border-radius: 4rem;
