--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11154,6 +11154,10 @@ a.text-dark:focus {
   cursor: pointer;
 }
 
+.disabled {
+  pointer-events: none;
+}
+
 .edit-avatar label {
   cursor: pointer;
 }
@@ -11200,5 +11204,23 @@ a.text-dark:focus {
   left: 0;
   width: 100%;
   padding-bottom: 15px;
+}
+
+.theme-selected .theme-content {
+  opacity: 0.6;
+}
+
+.theme-checked {
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  display: block;
+  margin: auto;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  padding: 0;
+  z-index: 2;
 }
 
