--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,6 +9,10 @@
   cursor: pointer;
 }
 
+.disabled {
+  pointer-events: none;
+}
+
 .edit-avatar {
   label {
     cursor: pointer;
@@ -68,4 +72,26 @@
   left: 0;
   width: 100%;
   padding-bottom: 15px;
+}
+
+.theme {
+  &-selected {
+    .theme-content {
+      opacity: .6;
+    }
+  }
+
+  &-checked {
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    display: block;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    padding: 0;
+    z-index: 2;
+  }
 }
