done: - pages content - profile customize - profile show

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -26,6 +26,9 @@ $gray-light: #F7F8FA;
 $danger: #F96D74;
 $success: #7EDB8F;
 
+$twitter: #00acee;
+$instagram: #3f729b;
+
 $body-bg: $gray-light;
 
 // Card
@@ -34,5 +37,5 @@ $border-color: rgba($paragraphs-color, .3);
 
 //
 $btn-border-radius: 4rem;
-//$btn-padding-y
-$btn-padding-x: 1.25rem;
+$btn-padding-y: .55rem;
+$btn-padding-x: 1.5rem;
