--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2695,7 +2695,7 @@ textarea.form-control.is-invalid {
           user-select: none;
   background-color: transparent;
   border: 1px solid transparent;
-  padding: 0.375rem 1.25rem;
+  padding: 0.55rem 1.5rem;
   font-size: 1rem;
   line-height: 1.6;
   border-radius: 4rem;
@@ -2731,41 +2731,65 @@ fieldset:disabled a.btn {
   pointer-events: none;
 }
 
-.btn-primary {
+.btn-primary,
+.btn-instagram,
+.btn-twitter {
   color: #fff;
   background-color: #082471;
   border-color: #082471;
 }
 
-.btn-primary:hover {
+.btn-primary:hover,
+.btn-instagram:hover,
+.btn-twitter:hover {
   color: #fff;
   background-color: #05194d;
   border-color: #051541;
 }
 
 .btn-primary:focus,
-.btn-primary.focus {
+.btn-instagram:focus,
+.btn-twitter:focus,
+.btn-primary.focus,
+.focus.btn-instagram,
+.focus.btn-twitter {
   box-shadow: 0 0 0 0.2rem rgba(45, 69, 134, 0.5);
 }
 
 .btn-primary.disabled,
-.btn-primary:disabled {
+.disabled.btn-instagram,
+.disabled.btn-twitter,
+.btn-primary:disabled,
+.btn-instagram:disabled,
+.btn-twitter:disabled {
   color: #fff;
   background-color: #082471;
   border-color: #082471;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active,
+.btn-instagram:not(:disabled):not(.disabled):active,
+.btn-twitter:not(:disabled):not(.disabled):active,
 .btn-primary:not(:disabled):not(.disabled).active,
-.show > .btn-primary.dropdown-toggle {
+.btn-instagram:not(:disabled):not(.disabled).active,
+.btn-twitter:not(:disabled):not(.disabled).active,
+.show > .btn-primary.dropdown-toggle,
+.show > .dropdown-toggle.btn-instagram,
+.show > .dropdown-toggle.btn-twitter {
   color: #fff;
   background-color: #051541;
   border-color: #041135;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus,
+.btn-instagram:not(:disabled):not(.disabled):active:focus,
+.btn-twitter:not(:disabled):not(.disabled):active:focus,
 .btn-primary:not(:disabled):not(.disabled).active:focus,
-.show > .btn-primary.dropdown-toggle:focus {
+.btn-instagram:not(:disabled):not(.disabled).active:focus,
+.btn-twitter:not(:disabled):not(.disabled).active:focus,
+.show > .btn-primary.dropdown-toggle:focus,
+.show > .dropdown-toggle.btn-instagram:focus,
+.show > .dropdown-toggle.btn-twitter:focus {
   box-shadow: 0 0 0 0.2rem rgba(45, 69, 134, 0.5);
 }
 
@@ -3009,41 +3033,53 @@ fieldset:disabled a.btn {
   box-shadow: 0 0 0 0.2rem rgba(216, 217, 219, 0.5);
 }
 
-.btn-dark {
+.btn-dark,
+.btn-black {
   color: #fff;
   background-color: #343a40;
   border-color: #343a40;
 }
 
-.btn-dark:hover {
+.btn-dark:hover,
+.btn-black:hover {
   color: #fff;
   background-color: #23272b;
   border-color: #1d2124;
 }
 
 .btn-dark:focus,
-.btn-dark.focus {
+.btn-black:focus,
+.btn-dark.focus,
+.focus.btn-black {
   box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5);
 }
 
 .btn-dark.disabled,
-.btn-dark:disabled {
+.disabled.btn-black,
+.btn-dark:disabled,
+.btn-black:disabled {
   color: #fff;
   background-color: #343a40;
   border-color: #343a40;
 }
 
 .btn-dark:not(:disabled):not(.disabled):active,
+.btn-black:not(:disabled):not(.disabled):active,
 .btn-dark:not(:disabled):not(.disabled).active,
-.show > .btn-dark.dropdown-toggle {
+.btn-black:not(:disabled):not(.disabled).active,
+.show > .btn-dark.dropdown-toggle,
+.show > .dropdown-toggle.btn-black {
   color: #fff;
   background-color: #1d2124;
   border-color: #171a1d;
 }
 
 .btn-dark:not(:disabled):not(.disabled):active:focus,
+.btn-black:not(:disabled):not(.disabled):active:focus,
 .btn-dark:not(:disabled):not(.disabled).active:focus,
-.show > .btn-dark.dropdown-toggle:focus {
+.btn-black:not(:disabled):not(.disabled).active:focus,
+.show > .btn-dark.dropdown-toggle:focus,
+.show > .dropdown-toggle.btn-black:focus {
   box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5);
 }
 
@@ -3741,8 +3777,8 @@ input[type=button].btn-block {
 }
 
 .dropdown-toggle-split {
-  padding-right: 0.9375rem;
-  padding-left: 0.9375rem;
+  padding-right: 1.125rem;
+  padding-left: 1.125rem;
 }
 
 .dropdown-toggle-split::after,
@@ -11158,6 +11194,20 @@ a.text-dark:focus {
   pointer-events: none;
 }
 
+.mh-100vh {
+  min-height: 100vh;
+}
+
+.btn-twitter {
+  background-color: #00acee;
+  border-color: #00acee;
+}
+
+.btn-instagram {
+  background-color: #3f729b;
+  border-color: #3f729b;
+}
+
 .edit-avatar label {
   cursor: pointer;
 }
@@ -11206,6 +11256,10 @@ a.text-dark:focus {
   padding-bottom: 15px;
 }
 
+.btn-black {
+  background-color: #101B3A;
+}
+
 .theme-selected .theme-content {
   opacity: 0.6;
 }
@@ -11222,5 +11276,80 @@ a.text-dark:focus {
   bottom: 0;
   padding: 0;
   z-index: 2;
+}
+
+.theme--dark,
+.theme--blue,
+.theme--sweet-pink {
+  color: #fff;
+}
+
+.theme--dark .card-title,
+.theme--blue .card-title,
+.theme--sweet-pink .card-title {
+  color: #fff;
+}
+
+.theme--dark .text-muted,
+.theme--blue .text-muted,
+.theme--sweet-pink .text-muted {
+  color: rgba(255, 255, 255, 0.45) !important;
+}
+
+.theme--dark .btn,
+.theme--blue .btn,
+.theme--sweet-pink .btn {
+  border: transparent;
+}
+
+.theme--blue,
+.theme--sweet-pink {
+  background-image: linear-gradient(134deg, #005EFF 0%, #00A8FF 100%);
+}
+
+.theme--blue .btn,
+.theme--sweet-pink .btn {
+  background-color: rgba(0, 0, 0, 0.25);
+}
+
+.theme--blue .btn:hover,
+.theme--sweet-pink .btn:hover {
+  background-color: rgba(0, 0, 0, 0.35);
+}
+
+.theme--dark {
+  background-image: linear-gradient(134deg, #000B1E 0%, #011154 100%);
+}
+
+.theme--dark .btn {
+  background-color: rgba(255, 255, 255, 0.12);
+}
+
+.theme--dark .btn:hover {
+  background-color: rgba(255, 255, 255, 0.25);
+}
+
+.theme--sweet-pink {
+  background-color: #FAACA8;
+  background-image: linear-gradient(19deg, #FAACA8 0%, #DDD6F3 100%);
+}
+
+.page-content {
+  line-height: 2.2em;
+}
+
+.page-content h1 {
+  font-weight: 600;
+  margin-bottom: 30px;
+}
+
+.page-content h3 {
+  margin-bottom: 20px;
+}
+
+.page-content blockquote {
+  border-right: 5px solid #cecece;
+  border-left: 0;
+  padding-right: 20px;
 }
 
