--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -26,9 +26,11 @@ $gray-light: #F7F8FA;
 $danger: #F96D74;
 $success: #7EDB8F;
 
-$twitter: #00acee;
-$instagram: #3f729b;
-$google: #DF4138;
+$twitter: #00ACEE;
+$instagram: #3F729B;
+$google: #EA4335;
+$facebook: #375BA6;
+$facebook: #4267B2;
 
 $body-bg: $gray-light;
 
@@ -38,5 +40,13 @@ $border-color: rgba($paragraphs-color, .3);
 
 //
 $btn-border-radius: 4rem;
-$btn-padding-y: .55rem;
+$btn-padding-y: .75rem;
 $btn-padding-x: 1.5rem;
+$btn-font-weight: 500;
+
+//
+$input-padding-y: .5rem;
+$input-padding-x: 1.2rem;
+
+
+$body-color: $paragraphs-color;
