--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,6 +5,12 @@
 // Fonts
 @import 'fonts';
 
+a {
+  transition: all .3s ease;
+  &:hover {
+    color: $secondary;
+  }
+}
 
 // helpers
 .cursor-pointer {
@@ -35,6 +41,19 @@
   @extend .btn-primary;
   background-color: $google;
   border-color: $google;
+}
+
+.btn-facebook {
+  @extend .btn-primary;
+  background-color: $facebook;
+  border-color: $facebook;
+}
+
+.btn-login {
+  @extend .btn-primary;
+  color: $primary;
+  background-color: #F0C9C8;
+  border-color: #F0C9C8;
 }
 
 .edit-avatar {
@@ -189,5 +208,101 @@
     border-right: 5px solid #cecece;
     border-left: 0;
     padding-right: 20px;
+  }
+}
+
+body.homepage {
+  background-color: #fff;
+
+  .navbar {
+    z-index: 2;
+    background-color: transparent !important;
+    border: none !important;
+  }
+
+  h1 {
+    font-size: 38px;
+    line-height: 1.4em;
+  }
+
+  p.lead {
+    font-size: 18px;
+  }
+
+  .divider {
+    span {
+      width: 35px;
+      height: 35px;
+      line-height: 35px;
+      border-radius: 50%;
+      margin: auto;
+      position: relative;
+      z-index: 2;
+    }
+
+    &:after {
+      content: '';
+      background-color: $gray;
+      position: absolute;
+      height: 1px;
+      width: 100%;
+      right: 0;
+      top: 50%;
+      z-index: 1;
+    }
+  }
+
+  .form-group {
+    margin-bottom: 22px;
+  }
+
+  .sidebar {
+    background-color: #FCDED5;
+    padding-top: 100px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 45%;
+    height: 100%;
+    min-height: 100vh;
+    overflow: hidden;
+
+    @include media-breakpoint-down(sm) {
+      position: relative;
+      width: 100%;
+      padding-top: 50px;
+    }
+
+    .media {
+      margin-bottom: 32px;
+
+      .rounded {
+        border-radius: 14px !important;
+      }
+
+      h5 {
+        font-size: 22px;
+      }
+
+      img {
+        max-width: 52px;
+      }
+
+      .media-body {
+        max-width: 342px;
+        line-height: 32px;
+      }
+    }
+
+    .iphone-demo {
+      img {
+        width: 100%;
+        max-width: 350px;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin-bottom: -120px;
+      }
+    }
   }
 }
