--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,6 +7,7 @@
 
 a {
   transition: all .3s ease;
+
   &:hover {
     color: $secondary;
   }
@@ -302,7 +303,22 @@ body.homepage {
         left: 0;
         right: 0;
         margin-bottom: -120px;
+        transition: all 0.3s cubic-bezier(0.65, 0.05, 0.36, 1);
       }
+
+      //&:hover {
+      //  img {
+      //    box-shadow: 0 12px 40px -30px rgba($primary, .12);
+      //    position: absolute;
+      //    bottom: 0;
+      //    margin-bottom: 30px;
+      //  }
+      //}
     }
   }
+}
+
+.form-check {
+  padding-left: inherit;
+  padding-right: 1.25rem;
 }
