fix logo in profile

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -26,6 +26,10 @@ a {
   min-height: 100vh;
 }
 
+.mh-93vh {
+  min-height: 93vh;
+}
+
 .btn-twitter {
   @extend .btn-primary;
   background-color: $twitter;
