--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -166,6 +166,7 @@ a {
   }
 
   &--blue {
+    background-image: linear-gradient(134deg, #005EFF 0%, #00A8FF 100%);
     #app {
       background-image: linear-gradient(134deg, #005EFF 0%, #00A8FF 100%);
     }
@@ -180,6 +181,7 @@ a {
   }
 
   &--dark {
+    background-image: linear-gradient(134deg, #000B1E 0%, #011154 100%);
     #app {
       background-image: linear-gradient(134deg, #000B1E 0%, #011154 100%);
     }
@@ -196,6 +198,8 @@ a {
   &--sweet-pink {
     @extend .theme--blue;
 
+    background-color: #FAACA8;
+    background-image: linear-gradient(19deg, #FAACA8 0%, #DDD6F3 100%);
     #app {
       background-color: #FAACA8;
       background-image: linear-gradient(19deg, #FAACA8 0%, #DDD6F3 100%);
